# mcp-agent-platform

./: .gitignore  Makefile  README.md  package.json  rebuild-history.sh  tsconfig.json
platform/: docker-compose.yml  (+1 more)
platform/agent-sdk/: README.md  pyproject.toml
platform/agent-sdk/agent_sdk/: __init__.py  context.py  knowledge.py  memory.py  plugin.py  testing.py  tool.py
platform/agent-sdk/tests/: __init__.py  test_context.py  test_plugin_manifest.py  test_tool_decorator.py
platform/agent-server/: .env.example  README.md  pyproject.toml
platform/agent-server/agents/: coding-agent.yaml  ops-agent.yaml
platform/agent-server/app/: config.py  deploy.py  logging_config.py  main.py  tracing.py  usage.py
platform/agent-server/app/agent/: classifier_eval.py  compressor.py  fleet_bus.py  graph.py  graph_v2.py  intent.py  model_fallback.py  prompts.py  reflexion.py  skill_activation.py  skills_index.py  subagent.py  subagent_context.py  subagent_verifier.py  tool_router.py
platform/agent-server/app/api/: auth_proxy.py  chat.py  workspace.py
platform/agent-server/app/auth/: auth_client.py  middleware.py
platform/agent-server/app/context/: request_context.py  workspace.py
platform/agent-server/app/events/: kafka_producer.py  model_provenance.py
platform/agent-server/config/: deployment.yaml
platform/agent-server/docs/: OBSERVABILITY.md
platform/agent-server/scripts/: measure_token_accuracy.py
platform/agent-server/tests/: test_agent_mode.py  test_ast_compressor.py  test_auth_contract.py  test_auth_middleware.py  test_auth_proxy.py  test_auth_service_client.py  test_cancel_endpoint.py  test_chat_auth.py  test_chunkers.py  test_compressor.py  test_context_manager.py  test_dashboard_audit.py  test_deploy.py  test_file_tools.py  test_fleet_bus.py  test_gaps.py  test_graph_v2.py  test_jwks_async.py  test_learned_reranker.py  test_lineage_propagation.py  test_llm_reranker.py  test_model_provenance.py  test_observability.py  test_ops_tools.py  test_prompt_cache_isolation.py  test_prompt_governance.py  test_rag_eval.py  test_rag_tenant_isolation.py  test_reflexion.py  test_skills_index.py  test_subagent.py  test_subagent_verifier.py  test_temperature_plumbing.py  test_ticket_backend.py  test_tool_router.py  test_workspace_api.py  test_workspace_security.py
platform/eval-harness/: JAVA_VS_PYTHON.md  README.md  analyze_experiment.py  java_vs_python_experiment.py  pyproject.toml  run-java-vs-python.sh  run_experiment.py
platform/eval-harness/baselines/: master.json
platform/eval-harness/ci/: __init__.py  eval_gate.py
platform/eval-harness/eval/: __init__.py  case.py  report.py  runner.py
platform/eval-harness/golden/: code_run_basic.yaml  efficient_memory_recall.yaml  explain_recursion.yaml  lift_memory_recall_across_session.yaml  memory_set_then_search.yaml  no_tool_simple_chat.yaml  subagent_avoid_overuse_single_file.yaml  subagent_parallel_file_summary.yaml
platform/eval-harness/tests/: __init__.py  test_bfcl.py  test_engineering_scorers.py  test_llm_judge.py  test_nofk_aggregate.py  test_scorers.py
(+436 files in other folders)
