[project]
name = "coding-agent-server"
version = "0.1.0"
description = "Coding agent server with OpenAI-compatible API, LangGraph agent loop, and RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=2.0.0",
    "PyJWT[crypto]>=2.8.0",
    "pyyaml>=6.0",
    "watchfiles>=1.0.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
]
rag = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-languages>=1.10.0",
    "sentence-transformers>=3.0.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
]
kafka = [
    "aiokafka>=0.11.0",
]
tracing = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
